<resources>
    <string name="app_name">Speedometer</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="_0_km_h">0</string>
    <string name="stop">stop</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="km_h">km/h</string>
    <string name="mph">mph</string>
    <string name="kph">KPH</string>
</resources>